--- a/admin/css/admin_style.css
+++ b/admin/css/admin_style.css
@@ -407,6 +407,17 @@ section {
   min-width: 100%;
 }
 
+.show-posts .box-container .box .options {
+  font-size: 1.8rem;
+  margin: 0 0 0 0;
+  color: var(--black);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  padding: 0.5rem 0;
+  min-width: 100%;
+}
+
 .show-posts .box-container .box .posts-content {
   font-size: 1.7rem;
   color: var(--light-color);
@@ -441,182 +452,6 @@ section {
 .show-posts .box-container .box .icons div i {
   color: var(--light-color);
   margin-right: 0.5rem;
-}
-
-.accounts .box-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 33rem);
-  gap: 1.5rem;
-  justify-content: center;
-  align-items: flex-start;
-}
-
-.accounts .box-container .box {
-  background-color: var(--white);
-  border-radius: 0.5rem;
-  box-shadow: var(--box-shadow);
-  border: var(--border);
-  padding: 1rem 2rem;
-  text-align: center;
-}
-
-.accounts .box-container .box p {
-  margin: 0.5rem 0;
-  font-size: 1.8rem;
-  color: var(--black);
-  line-height: 1.5;
-}
-
-.accounts .box-container .box p span {
-  color: var(--main-color);
-}
-
-.read-post form {
-  border-radius: 0.5rem;
-  border: var(--border);
-  padding: 2rem;
-  background-color: var(--white);
-  box-shadow: var(--box-shadow);
-}
-
-.read-post form .status {
-  border-radius: 0.5rem;
-  padding: 1rem 2.5rem;
-  font-size: 2rem;
-  color: var(--white);
-  display: inline-block;
-}
-
-.read-post form .image {
-  width: 100%;
-  border-radius: 0.5rem;
-  margin-top: 1.5rem;
-}
-
-.read-post form .title {
-  color: var(--black);
-  font-size: 2rem;
-  margin-top: 1.5rem;
-}
-
-.read-post form .content {
-  line-height: 1.5;
-  font-size: 1.8rem;
-  color: var(--light-color);
-  padding: 1rem 0;
-  white-space: pre-line;
-}
-
-.read-post form .icons {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border-radius: 0.5rem;
-  border: var(--border);
-  background-color: var(--light-bg);
-  padding: 1.5rem 2rem;
-  margin: 1rem 0;
-}
-
-.read-post form .icons div {
-  font-size: 1.8rem;
-}
-
-.read-post form .icons span {
-  color: var(--main-color);
-}
-
-.read-post form .icons i {
-  color: var(--light-color);
-  margin-right: 0.5rem;
-}
-
-.comments .comment-title {
-  border-top-right-radius: 0.5rem;
-  border-top-left-radius: 0.5rem;
-  background-color: var(--black);
-  padding: 2rem;
-  color: var(--white);
-  font-size: 2rem;
-}
-
-.comments .box-container {
-  border-bottom-right-radius: 0.5rem;
-  border-bottom-left-radius: 0.5rem;
-  background-color: var(--white);
-  box-shadow: var(--box-shadow);
-  border: var(--border);
-  padding: 2rem;
-  display: grid;
-  gap: 2rem;
-}
-
-.comments .box-container .box {
-  background-color: var(--light-bg);
-  border-radius: 0.5rem;
-  padding: 1.5rem;
-  border: var(--border);
-}
-
-.comments .box-container .post-title {
-  font-size: 2rem;
-  color: var(--light-color);
-}
-
-.comments .box-container .post-title span {
-  color: var(--black);
-}
-
-.comments .box-container .post-title a {
-  color: var(--main-color);
-  margin-left: 0.5rem;
-}
-
-.comments .box-container .post-title a:hover {
-  color: var(--black);
-  text-decoration: underline;
-}
-
-.comments .box-container .box .user {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  margin-bottom: 1.5rem;
-}
-
-.comments .box-container .box .user i {
-  font-size: 2rem;
-  border-radius: 0.5rem;
-  border: var(--border);
-  height: 4.5rem;
-  width: 5rem;
-  line-height: 4.1rem;
-  background-color: var(--white);
-  text-align: center;
-  color: var(--light-color);
-}
-
-.comments .box-container .box .user .user-info span {
-  font-size: 2rem;
-  color: var(--main-color);
-}
-
-.comments .box-container .box .user .user-info div {
-  color: var(--light-color);
-  font-size: 1.6rem;
-  margin-top: 0.2rem;
-}
-
-.comments .box-container .box .text {
-  font-size: 1.8rem;
-  color: var(--black);
-  line-height: 1.5;
-  white-space: pre-line;
-  background-color: var(--white);
-  border-radius: 0.5rem;
-  padding: 1.5rem;
-  margin: 0.5rem 0;
-  border: var(--border);
 }
 
 /* media queries  */
@@ -661,10 +496,6 @@ section {
   }
 
   .show-posts .box-container {
-    grid-template-columns: 1fr;
-  }
-
-  .accounts .box-container {
     grid-template-columns: 1fr;
   }
 }
